--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link rel="stylesheet" href="styles/layouts.css">
   <link rel="stylesheet" href="styles/modules.css">
 
-  <!-- template for ** card -->
+  <!-- template for ** -->
   <script id="" type="text/x-handlebars-template">
-    
+
   </script>
 </head>
 <body>
@@ -21,7 +21,10 @@
 
   </header>
   <main>
-
+    <!-- Login Section -->
+    <form id="loginForm">
+      <input type="text" name="loginInput" id="loginInput">
+    </form>
   </main>
     <!-- CDN resources -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
